test/Fail/Issue2089.err
Issue2089.agda:9.21-30: error: [NoSuchModule]
No module M.Private in scope
when scope checking the declaration
  module ShouldFail = M.Private
